# CMakeJNI

./: CMakeCache.txt  README.md
app/: CMakeCache.txt  CMakeLists.txt  build.gradle
app/src/androidTest/java/org/loofer/cmakejni/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/org/loofer/cmakejni/: FFmpegUtils.java  MainActivity.java
app/src/main/jni/: player.c
app/src/main/res/values/: strings.xml
app/src/test/java/org/loofer/cmakejni/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
